--- a/trunk/string/docs/ChangeLog.txt
+++ b/trunk/string/docs/ChangeLog.txt
@@ -7,15 +7,20 @@ Changes from 2.4-1 --> 2.5-1
 [MOD] Changed from LGPL to BSD license.
 [NEW] 'Trim Whitespace.vi' is now polymorphic, accepting strings or
       arrays of strings.
-[NEW] 'Is a GUID.vi' is a VI that tests whether a string is a GUID
-[NEW] 'Is an MD5.vi' is a VI that tests whether a string is an MD5
-[NEW] 'Place Number to Proper Engl Text.vi' is a VI that converts a
-      number to text using 'place number' format, for example:
-      10 --> 'tenth', 21 --> 'twenty first', 
+[NEW] 'Convert EOLs.vi' is now polymorphic, accepting strings or
+      arrays of strings.
+[MOD] "Multi-Line String to Array.vi" no longer trims trailing
+      whitespace before converting to array.
 [NEW] 'To Camel Case.vi' converts a string into camel case format.
       For example: 'hello world' --> 'HelloWorld'
 [NEW] 'To Proper Case.vi' converts a string to proper case format.
       For example: 'hello world' --> 'Hello world'
+[NEW] 'Place Number to Proper Engl Text.vi' is a VI that converts a
+      number to text using 'place number' format, for example:
+      10 --> 'tenth', 21 --> 'twenty first'
+[NEW] 'Search or Split String.vi' is a VI that performs the standard
+      Search/Split String function, but, in Search mode, splits string
+      after search string/char and returns the offset after the match.
 [FIX] Changed several inputs of VIs to 'required input', since in
       accordance with the proper usage of the applicable VI.
 
