--- a/lvdata/docs/ChangeLog.txt
+++ b/lvdata/docs/ChangeLog.txt
@@ -1,4 +1,11 @@
--= oglib_lvdata-2.6-1.ogp =-
+-= oglib_lvdata-2.7-1.ogp =-
+
+
+Changes from 2.6-1 --> 2.7-1
+--------------------------------
+2006-12-01
+[MOD] Added types for I64 (0x04), U64 (0x08), and Enum U64 (0x18)
+
 
 Changes from 2.5-1 --> 2.6-1
 --------------------------------
