--- a/lvdata/docs/ChangeLog.txt
+++ b/lvdata/docs/ChangeLog.txt
@@ -6,6 +6,13 @@ Changes from 2.6-1 --> 2.7-1
 2006-12-01
 [MOD] Added support for for 64-bit integer data types, such as
       I64 (0x04), U64 (0x08), and Enum U64 (0x18).
+[MOD] "Type Descriptor Enumeration.ctl" support for 64-bit types.
+[MOD] "Get Data Name from TD.vi" support for 64-bit types.
+[MOD] "Get Default Data from TD.vi" support for 64-bit types.
+[MOD] "Get Strings from Enum.vi" support for 64-bit types.
+[MOD] "Set Data Name.vi" support for 64-bit types.
+[MOD] "Set Enum String Value.vi" support for 64-bit types.
+[MOD] "Size of Data from TD.vi" support for 64-bit types.
 [MOD] Added "Array Name" input on "Array of VData to VArray.vi".
 
 
