--- a/lvdata/docs/ChangeLog.txt
+++ b/lvdata/docs/ChangeLog.txt
@@ -3,7 +3,8 @@
 
 Changes from 2.6-1 --> 2.7-1
 --------------------------------
-2006-12-01
+2006-12-02
+[NEW] 100% unit test coverage during library build.
 [MOD] Added support for for 64-bit integer data types, such as
       I64 (0x04), U64 (0x08), and Enum U64 (0x18).
 [MOD] "Type Descriptor Enumeration.ctl" support for 64-bit types.
